fix(small-stage): vertical spacing (#1119)

--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -1137,8 +1137,9 @@ $nx-theme: (
     small-stage-expert-header-height: 0,
     small-stage-expert-header-padding: 16px 0 8px,
     small-stage-expert-content-min-height: 72px,
-    small-stage-expert-content-margin-top: 8px,
-    small-stage-expert-content-margin-bottom: 24px,
+    small-stage-expert-content-margin-top: 32px,
+    small-stage-expert-content-margin-bottom: 32px,
+    small-stage-expert-tablet-content-margin-bottom: 24px,
     small-stage-expert-mobile-content-margin-bottom: 16px,
     small-stage-expert-image-min-height: 100px,
     small-stage-expert-image-mobile-height: 15vw,
